# GPT-TUI

./: Dockerfile  README.md  chat.css  chat.py  main.py  pyproject.toml
