[tool.poetry]
name = "gpt-tui"
version = "0.1.0"
description = "A TUI to interact with ChatGPT"
authors = ["Graham Hough <graham@hough.io>"]
readme = "README.md"
packages = [{include = "gpt_tui"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = {extras = ["dev"], version = "^0.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
